💄 style: update some style

--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -41,7 +41,7 @@
                 <MListItemTitle>
                     @(I18n.T("Backups.Upload.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Backups.Backups.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
@@ -62,7 +62,7 @@
                 <MListItemTitle>
                     @(I18n.T("Backups.Download.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Backups.Restore.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
