--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
@@ -15,7 +15,7 @@
                 <MListItemTitle>
                     @(I18n.T("Export.Export.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Export.Export.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
@@ -36,7 +36,7 @@
                 <MListItemTitle>
                     @(I18n.T("Export.Import.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Export.Import.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
