--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -145,7 +145,7 @@
             }
         </DesktopContent>
         <MobileContent>
-            <div class="mb-5" style="display: grid;grid-template-columns: repeat(2, 1fr);gap: 12px;">
+            <div style="display: grid;grid-template-columns: repeat(2, 1fr);gap: 14px;">
                 @foreach (var list in ViewLists)
                 {
                     @foreach (var item in list.Value)
