--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -68,11 +68,10 @@
                     <MListItemTitle>
                         @(I18n.T("User.Sign.Name"))
                     </MListItemTitle>
-
                 </MListItemContent>
 
                 <MListItemContent>
-                    <MListItemSubtitle Class="text-right">
+                    <MListItemSubtitle Class="text-right" Style="-webkit-line-clamp: 2;">
                         @Sign
                     </MListItemSubtitle>
                 </MListItemContent>
