--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
@@ -21,7 +21,7 @@
                          TValue="TItemValue"
                          ValueChanged="InternalValueChanged"
                          OnChange="OnChange"
-                         Class="mt-0 pb-1"
+                         Class="mt-0"
                          Row="@Row"
                          HideDetails="@("auto")"
                          Mandatory="true"
@@ -30,7 +30,7 @@
                 {
                     <MRadio @key="InternalItemValue(item)"
                             Label="@InternalItemText(item)"
-                            Class="my-2"
+                            Class="my-1"
                             Value="InternalItemValue(item)"
                             Color="@MRadioColor">
                     </MRadio>
