--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
@@ -15,7 +15,7 @@
                 <MListItemTitle>
                     @(I18n.T("Backups.Backups.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Backups.Backups.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
@@ -36,7 +36,7 @@
                 <MListItemTitle>
                     @(I18n.T("Backups.Restore.Title"))
                 </MListItemTitle>
-                <MListItemSubtitle>
+                <MListItemSubtitle Class="text-caption-xs-only">
                     @(I18n.T("Backups.Restore.Subtitle"))
                 </MListItemSubtitle>
             </MListItemContent>
