🆕 feat: add SponsorSupportSnackbar

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -20,6 +20,7 @@
 
                     <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
                     <PermissionSnackbar></PermissionSnackbar>
+                    <SponsorSupportSnackbar></SponsorSupportSnackbar>
                 </ChildContent>
 
                 <ErrorContent>
