--- a/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
@@ -21,6 +21,7 @@
                     <MainLayoutBottomNav Items="NavigationButtons"></MainLayoutBottomNav>
 
                     <PwaSnackbar OnRefresh="@RefreshToSkipWaiting"></PwaSnackbar>
+                    <SponsorSupportSnackbar></SponsorSupportSnackbar>
                 </ChildContent>
                 <ErrorContent>
                     <MContainer Class="fill-height justify-center">
