💄 style: update a little style

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
@@ -30,7 +30,7 @@
                 {
                     <MRadio @key="InternalItemValue(item)"
                             Label="@InternalItemText(item)"
-                            Class="my-1"
+                            Class="mt-1"
                             Value="InternalItemValue(item)"
                             Color="@MRadioColor">
                     </MRadio>
