💄 style: scrollbar style

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -28,6 +28,10 @@
     --editor-bottom: 48px !important;
 }
 
+    .vditor-reset *::-webkit-scrollbar {
+        display: initial !important;
+    }
+
     .vditor-reset iframe.iframe__video {
         width: 100%;
         aspect-ratio: 2/1;
@@ -42,6 +46,7 @@
     .vditor-reset audio {
         border-radius: 9999px;
     }
+
         .vditor-reset audio::-webkit-media-controls {
             width: 100%;
         }
