--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -90,13 +90,14 @@ html {
 
 @media (hover: hover) {
     ::-webkit-scrollbar {
-        width: 13px;
+        width: 11px;
+        height: 11px;
     }
 
     ::-webkit-scrollbar-thumb {
         border-style: dashed;
         border-color: transparent;
-        border-width: 4px;
+        border-width: 3px;
         background-clip: padding-box;
     }
 
