--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -1,50 +1,52 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits CardComponentBase<DiaryModel>
 
-<MCard Class="@($"diary-card elevation-sm-2--active {Class}")"
-       OnClick="ToRead"
-       Elevation="0"
-       Ripple="false"
-       Rounded="@("lg")">
-    <MListItem Dense>
-        <MListItemContent>
+<div class="m-sheet @Theme elevation-0 rounded-lg m-card m-card--link diary-card elevation-sm-2--active"
+     @onclick="ToRead">
+    <div class="m-list-item m-list-item--dense @Theme" tabindex="-1">
+        <div class="m-list-item__content">
             <div class="d-flex align-center">
                 <span class="text--secondary mr-3" style="font-size:1.1rem;">
-                    @(Date)
+                    @Date
                 </span>
                 @if (ShowIcon)
                 {
-                    <DiaryCardIcon Value="@weatherIcon" />
-                    <DiaryCardIcon Value="@moodIcon" />
+                    @if (!string.IsNullOrEmpty(weatherIcon))
+                    {
+                        <i class="m-icon mdi @weatherIcon @Theme ml-2" style="font-size:20px;"></i>
+                    }
+
+                    @if (!string.IsNullOrEmpty(moodIcon))
+                    {
+                        <i class="m-icon mdi @moodIcon @Theme ml-2" style="font-size:20px;"></i>
+                    }
                 }
             </div>
-        </MListItemContent>
-        <MListItemAction @onclick:stopPropagation="true">
+        </div>
+        <div class="m-list-item__action" @onclick:stopPropagation="true">
             @if (Value.Top)
             {
-                <MIcon>
-                    mdi-format-vertical-align-top
-                </MIcon>
+                <i class="m-icon mdi mdi-format-vertical-align-top @Theme"></i>
             }
 
             <MButton @attributes="activatorAttributes"
                      Icon="true"
                      OnClick="OpenMenu">
-                <MIcon Class="@($"chevron-down {(IsActive && ShowMenu?"chevron-down-rotate-x":"")}")">
-                    mdi-chevron-down
-                </MIcon>
+                <i class="m-icon mdi mdi-chevron-down @Theme chevron-down @(IsActive && ShowMenu?"chevron-down-rotate-x":"")"></i>
             </MButton>
-        </MListItemAction>
-    </MListItem>
-    <MDivider Class="mx-3"></MDivider>
-    <MListItem ThreeLine>
-        <MListItemContent>
+        </div>
+    </div>
+    <div class="m-divider__wrapper mx-3" style="display:contents;">
+        <hr class="m-divider mx-3 @Theme">
+    </div>
+    <div class="m-list-item m-list-item--three-line @Theme" tabindex="-1">
+        <div class="m-list-item__content">
             <div class="diary-card-title">
                 @title
             </div>
-            <MListItemSubtitle>
+            <div class="m-list-item__subtitle">
                 @text
-            </MListItemSubtitle>
-        </MListItemContent>
-    </MListItem>
-</MCard>
+            </div>
+        </div>
+    </div>
+</div>
