--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCardList.razor
@@ -54,6 +54,6 @@
 </RadioDialog>
 
 <MultiMenu @ref="multiMenu"
-           @bind-Visible="ShowMenu"
+           @bind-Visible="showMenu"
            DynamicListItems="menuItems">
 </MultiMenu>
