--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
@@ -19,7 +19,7 @@
 
         <MListItemContent Class="setting-state">
             <MListItemSubtitle>
-                @(DiaryCount)
+                @(diaryCount)
             </MListItemSubtitle>
         </MListItemContent>
 
