--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItems.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItems.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<div @ref="elementRef" class="swiper">
+<div @ref="Ref" class="swiper">
     <div class="swiper-wrapper">
         <CascadingValue Value="this"
                         IsFixed="true">
