--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -50,8 +50,8 @@
     </MultiMenu>
 </MyAppBar>
 
-<ScrollContainer ContentClass="d-flex flex-column"
-                 ContentStyle="height:100%;padding-top:0px;">
+<ScrollContainer ContentClass="d-flex flex-column py-0"
+                 ContentStyle="height:100%;">
     <div>
         <div class="d-flex align-center px-3">
             <button class="d-flex align-center text-h6 font-weight-bold" @onclick="()=>showCreateTime=true">
