💄 style: update a little style

--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -158,7 +158,9 @@
                         </MIcon>
                     </MListItemIcon>
                     <MListItemContent>
-                        @item
+                        <MListItemTitle Class="webdav-list-item__title">
+                            @item
+                        </MListItemTitle>
                     </MListItemContent>
                 </MListItem>
             </Virtualize>
