--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -38,7 +38,7 @@
     </div>
     <div class="m-list-item m-list-item--three-line @Theme" tabindex="-1">
         <div class="m-list-item__content">
-            <div class="diary-card-title">
+            <div class="m-list-item__title diary-card-list-item__title">
                 @title
             </div>
             <div class="m-list-item__subtitle">
