--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -27,16 +27,19 @@
                     <MListItemSubtitle Class="mb-2">
                         @(I18n.T("About.Introduction"))
                     </MListItemSubtitle>
-                    <MListItemSubtitle>
-                        <a href="https://beian.miit.gov.cn/" target="_blank" class="text--disabled text-decoration-none" style="font-size:0.75rem;">
-                            @(I18n.T("About.Record number") + recordNumber)
-                        </a>
-                        <MButton Class="text--disabled"
-                                 IconName="mdi-content-copy"
-                                 XSmall
-                                 OnClick="CopyRecordNumber">
-                        </MButton>
-                    </MListItemSubtitle>
+                    @if (PlatformIntegration.CurrentPlatform != AppDevicePlatform.Browser)
+                    {
+                        <MListItemSubtitle>
+                            <a href="https://beian.miit.gov.cn/" target="_blank" class="text--disabled text-decoration-none" style="font-size:0.75rem;">
+                                @(I18n.T("About.Record number") + recordNumber)
+                            </a>
+                            <MButton Class="text--disabled"
+                                     IconName="mdi-content-copy"
+                                     XSmall
+                                     OnClick="CopyRecordNumber">
+                            </MButton>
+                        </MListItemSubtitle>
+                    }
                 </MListItemContent>
             </MListItem>
         </MList>
