Windows scheme and share

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TextareaEdit/TextareaEdit.razor
@@ -1,15 +1,16 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<MTextarea @ref="mTextarea"
-           Value="@Value"
-           ValueChanged="ValueChanged"
-           Class="@($"{Class} user-select flex-grow-1 flex-column")"
-           Solo="true"
-           Flat="true"
-           BackgroundColor="transparent"
-           HideDetails="@("auto")"
-           NoResize="true"
-           Autofocus="Autofocus"
-           spellcheck="false"
-           Placeholder="@(I18n.T("Write.ContentPlace"))">
-</MTextarea>
+<MTextareaExtension @ref="mTextarea"
+                    Value="@Value"
+                    ValueChanged="ValueChanged"
+                    Class="@($"{Class} user-select flex-grow-1 flex-column")"
+                    Solo="true"
+                    Flat="true"
+                    BackgroundColor="transparent"
+                    HideDetails="@("auto")"
+                    NoResize="true"
+                    Autofocus="Autofocus"
+                    OnAfter="OnAfter"
+                    spellcheck="false"
+                    Placeholder="@(I18n.T("Write.ContentPlace"))">
+</MTextareaExtension>
