--- a/src/SwashbucklerDiary.Rcl/_Imports.razor
+++ b/src/SwashbucklerDiary.Rcl/_Imports.razor
@@ -1,11 +1,10 @@
-@using System.Net.Http
+﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorComponent
 @using Masa.Blazor
 @using Masa.Blazor.Presets
 @using SwashbucklerDiary.Shared
