♻️ refactor(SwiperTabItem): Prevent jamming during sliding

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItem.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/Swiper/SwiperTabItem.razor
@@ -4,7 +4,7 @@
     <CascadingValue Value="@Id"
                     Name="ScrollElementId"
                     IsFixed="true">
-        @if (activated)
+        @if (isActivated)
         {
             @ChildContent
         }
