♻️ refactor: Refactoring navigate

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -8,15 +8,15 @@
                 <ChildContent>
                     <FirstLaunchDialog />
 
-                    <MainLayoutNavDrawer Items="NavigationButtons"></MainLayoutNavDrawer>
+                    <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
 
                     <MMain>
-                        <PPageContainerExtension>
+                        <MyPageContainer PermanentPaths="permanentPaths">
                             @Body
-                        </PPageContainerExtension>
+                        </MyPageContainer>
                     </MMain>
 
-                    <MainLayoutBottomNav Items="NavigationButtons"></MainLayoutBottomNav>
+                    <MainLayoutBottomNav Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutBottomNav>
 
                     <UpdateDialog @bind-Visible="showUpdate"></UpdateDialog>
                     <PermissionSnackbar></PermissionSnackbar>
