--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Layout
 @inherits MainLayoutNavBase
 
-@if (IsRootPath)
+@if (IsPermanentPath)
 {
     <link href="@cssHref" rel="stylesheet" />
 }
@@ -21,5 +21,5 @@
 @code {
     private readonly static string cssHref = $"./_content/{Rcl.Essentials.StaticWebAssets.RclAssemblyName}/css/extend/masa-blazor-extend-enqueued-snackbars.css";
 
-    private bool Show => MasaBlazor.Breakpoint.Xs && IsRootPath;
+    private bool Show => MasaBlazor.Breakpoint.Xs && IsPermanentPath;
 }
