💄 style: update some style

--- a/src/SwashbucklerDiary.Rcl/Layout/SponsorSupportSnackbar.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/SponsorSupportSnackbar.razor
@@ -9,8 +9,8 @@
            Rounded="@("lg")"
            Timeout="-1">
     <ChildContent>
-        <div class="text-subtitle-1 font-weight-bold">
-            @I18n.T("SponsorSupport.Name")
+        <div class="text-subtitle-1 font-weight-bold mb-2">
+            🎉@I18n.T("SponsorSupport.Name")
         </div>
         <div class="text-subtitle-2">
             @I18n.T("SponsorSupport.Content")
